[gd_scene load_steps=4 format=3 uid="uid://d3o0ic0ya37i3"]

[ext_resource type="Script" uid="uid://bek2lt0su7vmh" path="res://settings/labeled_slider.gd" id="1_52pqc"]
[ext_resource type="AudioStream" uid="uid://ccdbiok202b11" path="res://sound/button_click.mp3" id="2_5bdq5"]
[ext_resource type="AudioStream" uid="uid://nt58omx85e7" path="res://sound/button_hover.mp3" id="3_spl23"]

[node name="LabeledSlider" type="HSlider"]
offset_top = 63.0
offset_right = 313.0
offset_bottom = 79.0
value = 100.0
tick_count = 10
script = ExtResource("1_52pqc")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 323.0
offset_top = -20.0
offset_right = 417.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 40
text = "(100)"

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5bdq5")
bus = &"SFX"

[node name="AudioHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_spl23")
bus = &"SFX"
